# dicecloud_models

./: Cargo.toml  readme.md
model_structure/: Property_structure.md  additional_types.md  calculation_structure.md  overal_structure.md
src/: lib.rs  main.rs  safe_frac.rs
src/data_models/: dnd_model.rs  flat_model.rs  generic_model.rs  mod.rs  tree_model.rs
