[package]
name = "dicecloud_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.147",features = ["derive"] }
serde_json = {version="1.0.89",optional = true}

[features]
dnd_models=["serde_json"]
default=["dnd_models"]