[package]
name = "dicecloud_models"
version = "0.1.0"
edition = "2021"
authors = ["gregovin"]
description = "A package which provides structures represents a character as recieved from dicecloud api, and (optionally) contains a flat representation if you would find that useful"
license = "LGPL-3-or-later"
repository = "https://github.com/gregovin/dicecloud_models"
keywords = ["dicecloud_v2","api"]
exclude = ["main.rs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.147",features = ["derive"]}
serde_json = {version="1.0.89",optional = true}

[features]
default=["serde_json"]